<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/no_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        >

    <ImageView
        android:id="@+id/car_rotate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_directions_car"
        android:contentDescription="@string/car" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/materialOrange"
            android:text="@string/travelling_anytime_soon"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/build_your_packlist_now"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_reminder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activate_packing_reminder"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="6dp"
        android:background="@drawable/floating_bt_gradient"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>