<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mode_of_travel"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/car"
                    android:paddingTop="20dp"
                    tools:src="@drawable/ic_airport_shuttle_black_24dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/items_background" />

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    tools:text="Owerri to Calvary" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/items_background" />

                <TextView
                    android:id="@+id/time_of_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    tools:text="jan 22 2019" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/items_background" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/share"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_share_black_24dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/items_background" />

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/destination_direction"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_directions_black_24dp"
                    android:text="@string/view_direction"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="20dp"
        android:text="@string/pack_list"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/check_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>